# sklmpu9255

./: CMakeLists.txt  LICENSE  README.md
cmake/: sklmpu9255Config.cmake.in
examples/: i2c_cmd.cpp  show_rpy.cpp
hidapi/: README.txt
src/: ak8963.cpp  i2c.cpp  internal.h  lsm6dsox.cpp  mpu.cpp  mpu925x.cpp  qfilter.cpp  sklmpu9255.cpp  sklmpu9255.h
tests/: test_i2c.cpp  test_mpu.cpp
